fix to classic Yii2

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # yii console commands
+/yii
 /yii_test
 /yii_test.bat
 
@@ -34,9 +35,12 @@ phpunit.phar
 /.vagrant
 
 # ignore generated files
+/frontend/web/index.php
 /frontend/web/index-test.php
 /frontend/web/robots.txt
+/api/web/index.php
+/api/web/index-test.php
+/api/web/robots.txt
+/backend/web/index.php
 /backend/web/index-test.php
 /backend/web/robots.txt
-/docker/db
-.env
