--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     "yiisoft/yii2-bootstrap5": "~2.0.2",
     "yiisoft/yii2-symfonymailer": "~2.0.3",
     "vlucas/phpdotenv": "^5.6",
-    "ext-json": "*",
-    "tuyakhov/yii2-json-api": "^1.0"
+    "ext-json": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
@@ -53,15 +52,6 @@
         "frontend/tests/",
         "frontend/tests/_support"
       ]
-    }
-  },
-  "autoload": {
-    "psr-4": {
-      "api\\": "api",
-      "backend\\": "backend",
-      "frontend\\": "frontend",
-      "common\\": "common",
-      "console\\": "console"
     }
   },
   "config": {
